Added scroll reveal, cleaned css code

--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@ Designed and edited by Randy Gentry.
         </div>
         <div class="hero-text">
 
-            <img id="me-image-header" src="assets/imgs/me.jpg" />
+            <img id="me-image-header" src="assets/imgs/me.jpg" alt="Randy Gentry" title="Randy Gentry" />
 
             <div class="typewriter">
                 <div id="name">Randy Gentry</div>
             </div>
             <hr>
             <div id="name-description">Web Developer</div>
-            <!-- <button>DOWNLOAD RESUME</button> -->
         </div>
     </header>
-    <section id="laptop"><img src="assets/imgs/laptop.jpg" alt="" class="laptop-image responsive"">
-    <p class=" bold">"It’s not a bug – it’s an undocumented feature." </p>
+    <section id="laptop"><img src="assets/imgs/laptop.jpg" alt="Coding Laptop" title="Coding Laptop"
+            class="laptop-image responsive">
+        <p class=" bold">"It’s not a bug – it’s an undocumented feature." </p>
     </section>
     <section id="about">
         <div class="title">
@@ -73,7 +73,8 @@ Designed and edited by Randy Gentry.
         </div>
         <div class="container-about">
             <div class="box-about-left">
-                <img src="assets/imgs/me-about.jpg" alt="" id="image-about">
+                <img src="assets/imgs/me-about.jpg" alt="Randy Gentry and Wife" title="Randy Gentry and Wife"
+                    id="image-about">
             </div>
             <div class="box-about-right">
                 <p class="bold meet-description">Meet Randy Gentry!</p>
@@ -98,24 +99,28 @@ Designed and edited by Randy Gentry.
             <div class="container-item-1">
                 <div class="container-item-1-1">
                     <div class="container-item-1-1-1">
-                        <div class="icon-background"><img src="assets/imgs/html5-icon.png" alt="">
+                        <div class="icon-background"><img src="assets/imgs/html5-icon.png" alt="HTML 5 Icon"
+                                title="HTML 5 Icon" class="icon">
                         </div>
                     </div>
 
                     <div class="container-item-1-1-2">
-                        <div class="icon-background"><img src="assets/imgs/css-icon.png" alt="">
+                        <div class="icon-background"><img src="assets/imgs/css-icon.png" alt="CSS Icon" title="CSS Icon"
+                                class="icon">
                         </div>
                     </div>
 
                 </div>
                 <div class="container-item-2-2">
                     <div class="container-item-1-2-1">
-                        <div class="icon-background"><img src="assets/imgs/react-icon.png" alt="">
+                        <div class="icon-background"><img src="assets/imgs/react-icon.png" alt="REACT JS Icon"
+                                title="REACT JS Icon" class="icon">
                         </div>
                     </div>
 
                     <div class="container-item-1-2-2">
-                        <div class="icon-background"><img src="assets/imgs/js-icon.png" alt=""></div>
+                        <div class="icon-background"><img src="assets/imgs/js-icon.png" alt="Javascript Icon"
+                                title="Javascript Icon" class="icon"></div>
                     </div>
 
                 </div>
@@ -144,7 +149,8 @@ Designed and edited by Randy Gentry.
         <div class="portfolio-container">
             <!-- One Nine One Website -->
             <div class="portfolio-item-1">
-                <img src="assets/imgs/one-nine-one-website.jpg" alt="" class="portfolio-image">
+                <img src="assets/imgs/one-nine-one-website.jpg" alt="One Nine One Website Icon"
+                    title="One Nine One Website Icon" class="portfolio-image">
                 <div class="overlay">
                     <div class="text">One Nine One Motorsports</div>
                     <a href="https://github.com/dhrandy/onenineone-racing" target="_blank">
@@ -156,7 +162,8 @@ Designed and edited by Randy Gentry.
                 </div>
             </div>
             <!-- HVAC Website -->
-            <div class="portfolio-item-2"><img src="assets/imgs/HVAC-website.jpg" alt="" class="portfolio-image">
+            <div class="portfolio-item-2"><img src="assets/imgs/HVAC-website.jpg" alt="HVAC Website Icon"
+                    title="HVAC Website Icon" class="portfolio-image">
                 <div class="overlay">
                     <div class="text">HVAC Site</div>
                     <a href="https://github.com/dhrandy/HVAC-website" target="_blank">
@@ -168,8 +175,8 @@ Designed and edited by Randy Gentry.
                 </div>
             </div>
             <!-- Forever May Fall Website -->
-            <div class="portfolio-item-3"><img src="assets/imgs/forevermayfall-website.jpg" alt=""
-                    class="portfolio-image">
+            <div class="portfolio-item-3"><img src="assets/imgs/forevermayfall-website.jpg"
+                    alt="Forever May Fall Website Icon" title="Forever May Fall Website Icon" class="portfolio-image">
                 <div class="overlay">
                     <div class="text">Forever May Fall</div>
                     <a href="https://github.com/dhrandy/forevermayfall-website" target="_blank">
@@ -181,7 +188,8 @@ Designed and edited by Randy Gentry.
                 </div>
             </div>
             <!-- Handy Soaps Website -->
-            <div class="portfolio-item-4"><img src="assets/imgs/handy-soaps-website.jpg" alt="" class="portfolio-image">
+            <div class="portfolio-item-4"><img src="assets/imgs/handy-soaps-website.jpg" alt="Handy Soaps Website Icon"
+                    title="Handy Soaps Website Icon" class="portfolio-image">
                 <div class="overlay">
                     <div class="text">Handy Soaps</div>
                     <a href="https://github.com/dhrandy/handysoaps" target="_blank">
@@ -193,7 +201,9 @@ Designed and edited by Randy Gentry.
                 </div>
             </div>
             <!-- Bird Dog Leatherworks Website -->
-            <div class="portfolio-item-5"><img src="assets/imgs/bird-dog-website.jpg" alt="" class="portfolio-image">
+            <div class="portfolio-item-5"><img src="assets/imgs/bird-dog-website.jpg"
+                    alt="Bird Dog Leatherworks Website Icon" title="Bird Dog Leatherworks Website Icon"
+                    class="portfolio-image">
                 <div class="overlay">
                     <div class="text">Bird Dog Leatherworks</div>
                     <a href="https://github.com/dhrandy/bird-dog-website" target="_blank">
@@ -205,7 +215,8 @@ Designed and edited by Randy Gentry.
                 </div>
             </div>
             <!-- D&R Cable Website -->
-            <div class="portfolio-item-6"><img src="assets/imgs/dandrcable-website.jpg" alt="" class="portfolio-image">
+            <div class="portfolio-item-6"><img src="assets/imgs/dandrcable-website.jpg" alt="D&R Cable Website Icon"
+                    title="D&R Cable Website Icon" class="portfolio-image">
                 <div class="overlay">
                     <div class="text">D&R Cable</div>
                     <a href="https://github.com/dhrandy/D-R-Website" target="_blank">
@@ -227,28 +238,28 @@ Designed and edited by Randy Gentry.
         <div class="hobbies-container">
             <div class="hobbies-column-1">
 
-                <div class="hobbies-item-1 hobbies-items"><img src="assets/imgs/classic.jpg" alt=""
-                        class="image-hobbies">
+                <div class="hobbies-item-1 hobbies-items"><img src="assets/imgs/classic.jpg" alt="Classic Car Hobby"
+                        title="Classic Car Hobby" class="image-hobbies">
                     <div class="overlay-hobbies">
                         <div class="text-hobbies">Classic Car</div>
                     </div>
                 </div>
-                <div class="hobbies-item-2 hobbies-items"><img src="assets/imgs/hobby-photography.jpg" alt=""
-                        class="image-hobbies">
+                <div class="hobbies-item-2 hobbies-items"><img src="assets/imgs/hobby-photography.jpg"
+                        alt=" Photography Hobby" title="Photography Hobby" class="image-hobbies">
                     <div class="overlay-hobbies">
                         <div class="text-hobbies">Photography</div>
                     </div>
                 </div>
             </div>
             <div class="hobbies-column-1">
-                <div class="hobbies-item-3 hobbies-items"><img src="assets/imgs/hobby-guitar.jpg" alt=""
-                        class="image-hobbies">
+                <div class="hobbies-item-3 hobbies-items"><img src="assets/imgs/hobby-guitar.jpg" alt="Guitar Hobby"
+                        title="Guitar Hobby" class="image-hobbies">
                     <div class="overlay-hobbies">
                         <div class="text-hobbies">Guitars</div>
                     </div>
                 </div>
-                <div class="hobbies-item-4 hobbies-items"><img src="assets/imgs/hobby-computer.jpg" alt=""
-                        class="image-hobbies">
+                <div class="hobbies-item-4 hobbies-items"><img src="assets/imgs/hobby-computer.jpg" alt="Computer Hobby"
+                        title="Computer Hobby" class="image-hobbies">
                     <div class="overlay-hobbies">
                         <div class="text-hobbies">Computers</div>
                     </div>
@@ -306,6 +317,8 @@ Designed and edited by Randy Gentry.
     <script src="assets/js/nav.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/14.2.0/smooth-scroll.min.js"></script>
     <script src="assets/js/scrolling-nav.js"></script>
+    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+    <script src="assets/js/scroll-reveal.js"></script>
 </body>
 
 </html>
