--- a/index.html
+++ b/index.html
@@ -298,16 +298,17 @@ Designed and edited by Randy Gentry.
             <a href="https://www.instagram.com/dhrandy/" class="fab fa-instagram social-footer foot-icon"
                 target="_blank"></a>
         </div>
-        <div class="center">
-            <div class="footer-link">
-                <a href="#home">HOME</a>
-                <a href="#knowledge">KNOWLEDGE</a>
-                <a href="#portfolio">PORTFOLIO</a>
-                <a href="#hobbies">HOBBIES</a>
-                <a href="#contact">CONTACT</a>
-            </div>
+
+        <div class="footer-link">
+            <a href="#home" class="link-home">HOME</a>
+            <a href="#about" class="link-about">ABOUT</a>
+            <a href="#knowledge" class="link-knowledge">KNOWLEDGE</a>
+            <a href="#portfolio" class="link-portfolio">PORTFOLIO</a>
+            <a href="#hobbies" class="link-hobbies">HOBBIES</a>
+            <a href="#contact" class="link-contact">CONTACT</a>
         </div>
-        <div class="footer">
+
+        <div class="footer center">
             © 2018 | Designed by Randy Gentry |
             <a href="https://github.com/dhrandy/dhrandy.github.io" class="github-link">See My Code</a>
         </div>
