Updated photo sizes, cleaned CSS

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <!-- 
 ==============================================================    
-Welcome to my html code!
+I see you have found my code! You can see the rest on my Github page at github.com/dhrandy
 Designed and edited by Randy Gentry.
 ==============================================================  
 -->
@@ -26,20 +26,7 @@ Designed and edited by Randy Gentry.
 </head>
 
 <body>
-
     <header class="hero-image" id="home">
-        <!-- <nav>
-            <ul class="container-link">
-                <li class="link link-1"><a href="#about">ABOUT</a></li>
-                <li class="link link-2"><a href="#knowledge">KNOWLEDGE</a></li>
-                <li class="link link-3"><a href="#portfolio">PORTFOLIO</a></li>
-                <li class="link link-4"><a href="#hobbies">HOBBIES</a></li>
-                <li class="link link-5"><a href="#hobbies">CONTACT</a></li>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                    <i class="fa fa-bars"></i>
-                </a>
-            </ul>
-        </nav> -->
         <div class="center">
             <div class="topnav" id="myTopnav">
                 <a href="#about">ABOUT</a>
@@ -107,7 +94,6 @@ Designed and edited by Randy Gentry.
                                 class="icon">
                         </div>
                     </div>
-
                 </div>
                 <div class="container-item-2-2">
                     <div class="container-item-1-2-1">
@@ -115,12 +101,10 @@ Designed and edited by Randy Gentry.
                                 title="REACT JS Icon" class="icon">
                         </div>
                     </div>
-
                     <div class="container-item-1-2-2">
                         <div class="icon-background"><img src="assets/imgs/js-icon.png" alt="Javascript Icon"
                                 title="Javascript Icon" class="icon"></div>
                     </div>
-
                 </div>
             </div>
             <div class="container-item-2">
@@ -298,7 +282,6 @@ Designed and edited by Randy Gentry.
             <a href="https://www.instagram.com/dhrandy/" class="fab fa-instagram social-footer foot-icon"
                 target="_blank"></a>
         </div>
-
         <div class="footer-link">
             <a href="#home" class="link-home">HOME</a>
             <a href="#about" class="link-about">ABOUT</a>
@@ -307,7 +290,6 @@ Designed and edited by Randy Gentry.
             <a href="#hobbies" class="link-hobbies">HOBBIES</a>
             <a href="#contact" class="link-contact">CONTACT</a>
         </div>
-
         <div class="footer center">
             © 2018 | Designed by Randy Gentry |
             <a href="https://github.com/dhrandy/dhrandy.github.io" class="github-link">See My Code</a>
